--- a/projekt-hype/site/index.html
+++ b/projekt-hype/site/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>Hello!</title>
         <link href="./css/main.css" rel="stylesheet"/>
         <meta charset="utf-8" />
     </head>
