+bakgrunder +test kör +scrollbar är alltid där

--- a/projekt-hype/site/galleri.html
+++ b/projekt-hype/site/galleri.html
@@ -9,10 +9,11 @@
         <div class="main">
             <img class="header" src="./img/header.png" />
             <nav class="utnav">
-                <a class="nav" href="index.html">Hem</a>
+                <a class="nav" href="start.html">Hem</a>
                 <a class="nav" href="fakta.html">Om/Fakta</a>
                 <a class="nav" href="podracing.html">Podracing</a>
                 <a class="navin" href="galleri.html">Galleri</a>
+                <a class="nav" href="test.html">Test kör</a>
             </nav>
             <div class="storlada">
                 <h1 class="innelada">Rubrik</h1>
