--- a/projekt-hype/site/fakta.html
+++ b/projekt-hype/site/fakta.html
@@ -13,6 +13,7 @@
                 <a class="navin" href="fakta.html">Om/Fakta</a>
                 <a class="nav" href="podracing.html">Podracing</a>
                 <a class="nav" href="galleri.html">Galleri</a>
+                <a class="nav" href="test.html">Test kör</a>
             </nav>
             <div class="storlada">
                 <h1 class="innelada">Rubrik</h1>
