+bakgrunder +fixade galleri

--- a/projekt-hype/site/index.html
+++ b/projekt-hype/site/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="bgstart">
     <head>
         <title></title>
         <link href="./css/main.css" rel="stylesheet"/>
