--- a/projekt-hype/site/galleri.html
+++ b/projekt-hype/site/galleri.html
@@ -5,7 +5,7 @@
         <link href="./css/main.css" rel="stylesheet"/>
         <meta charset="utf-8" />
     </head>
-    <body class="margin0">
+    <body class="margin0 bgstart">
         <div class="main">
             <img class="header" src="./img/header.png" />
             <nav class="utnav">
@@ -15,10 +15,16 @@
                 <a class="navin" href="galleri.html">Galleri</a>
                 <a class="nav" href="test.html">Testkör</a>
             </nav>
-            <div class="storlada">
-                <h1 class="innelada">Rubrik</h1>
-                <div class="innebild innelada">BILD</div>
-                <p class="innelada">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vel tempus justo. Aenean et tortor tempor, blandit ante vitae, ullamcorper turpis. Sed quis tellus lacinia, finibus massa non, euismod nulla. In dictum felis mollis, convallis tortor a, congue velit. Donec risus nisl, mattis sed gravida ac, interdum sit amet enim. Praesent dui odio, convallis et dui et, bibendum dictum ligula. Fusce volutpat, sem in ultricies faucibus, dui eros dignissim urna, id maximus elit justo sed ex. Donec pulvinar sapien quis dictum venenatis. Sed ornare, sem eget sodales placerat, enim turpis aliquam tellus, eget facilisis nisl metus a odio. Phasellus varius, ligula et consectetur luctus, odio tortor auctor tortor, in fermentum magna arcu a sem. Aenean elementum vulputate massa in pharetra. Etiam purus nibh, varius id sodales a, sollicitudin et mi.</p>
+            <div class="rubrik"><h1 class="innelada">Bilder</h1></div>
+            <div class="bildlada">
+                    <img class="innebild" src="./img/podride.jpg" />
+                    <img class="innebild" src="./img/podride-open.jpg" />
+                    <img class="innebild" src="./img/podride-car.jpg" />
+                    <img class="innebild" src="./img/podride-blue.jpg" />
+            </div>
+            <div class="rubrik"><h1 class="innelada">Fan-art</h1></div>
+            <div class="bildlada">
+
             </div>
         </div>
     </body>
