Fixade Fakta + misc css

--- a/projekt-hype/site/galleri.html
+++ b/projekt-hype/site/galleri.html
@@ -15,14 +15,14 @@
                 <a class="navin" href="galleri.html">Galleri</a>
                 <a class="nav" href="test.html">Testkör</a>
             </nav>
-            <div class="rubrik"><h1 class="innelada">Bilder</h1></div>
+            <div class="rubrik"><h1>BILDER</h1></div>
             <div class="bildlada">
                     <img class="innebild" src="./img/podride.jpg" />
                     <img class="innebild" src="./img/podride-open.jpg" />
                     <img class="innebild" src="./img/podride-car.jpg" />
                     <img class="innebild" src="./img/podride-blue.jpg" />
             </div>
-            <div class="rubrik"><h1 class="innelada">Fan-art</h1></div>
+            <div class="rubrik"><h1>FAN-ART</h1></div>
             <div class="bildlada">
 
             </div>
