--- a/projekt-hype/site/galleri.html
+++ b/projekt-hype/site/galleri.html
@@ -24,7 +24,10 @@
             </div>
             <div class="rubrik"><h1>FAN-ART</h1></div>
             <div class="bildlada">
-
+                <img class="innebild" src="./img/fanart_g.jpg" />
+                <img class="innebild" src="./img/fanart_g.jpg" />
+                <img class="innebild" src="./img/fanart_g.jpg" />
+                <img class="innebild" src="./img/fanart_g.jpg" />
             </div>
         </div>
     </body>
