--- a/projekt-hype/site/galleri.html
+++ b/projekt-hype/site/galleri.html
@@ -25,9 +25,9 @@
             <div class="rubrik"><h1>FAN-ART</h1></div>
             <div class="bildlada">
                 <img class="innebild" src="./img/fanart_g.jpg" />
-                <img class="innebild" src="./img/fanart_g.jpg" />
-                <img class="innebild" src="./img/fanart_g.jpg" />
-                <img class="innebild" src="./img/fanart_g.jpg" />
+                <img class="innebild" src="./img/fanart_theo.png" />
+                <img class="innebild" src="./img/fanart_hargaaya.png" />
+                <img class="innebild" src="./img/fanart_adin.png" />
             </div>
         </div>
     </body>
