Fixed Om/Fakta -> Fakta, fixed link to index (HYPE)

--- a/projekt-hype/site/fakta.html
+++ b/projekt-hype/site/fakta.html
@@ -10,7 +10,7 @@
             <img class="header" src="./img/header.png" />
             <nav class="utnav">
                 <a class="nav" href="start.html">Hem</a>
-                <a class="navin" href="fakta.html">Om/Fakta</a>
+                <a class="navin" href="fakta.html">Fakta</a>
                 <a class="nav" href="podracing.html">Podracing</a>
                 <a class="nav" href="galleri.html">Galleri</a>
                 <a class="nav" href="test.html">Testkör</a>
