--- a/projekt-hype/site/start.html
+++ b/projekt-hype/site/start.html
@@ -7,10 +7,10 @@
     </head>
     <body class="margin0 bgstart">
         <div class="main">
-            <img class="header" src="./img/header.png" />
+          <a  href="index.html"><img class="header Picnavin" src="./img/header.png" /> </a>
             <nav class="utnav">
                 <a class="navin" href="start.html">Hem</a>
-                <a class="nav" href="fakta.html">Om/Fakta</a>
+                <a class="nav" href="fakta.html">Fakta</a>
                 <a class="nav" href="podracing.html">Podracing</a>
                 <a class="nav" href="galleri.html">Galleri</a>
                 <a class="nav" href="test.html">Testkör</a>
