Förberede kod till en ny header

--- a/projekt-hype/site/fakta.html
+++ b/projekt-hype/site/fakta.html
@@ -7,7 +7,8 @@
     </head>
     <body class="margin0 bgstart">
         <div class="main">
-            <img class="header" src="./img/header.png" />
+          <a  href="index.html"><img class="header2" src="./img/header2.png" /> </a>
+          <a  href="index.html"><img class="header Picnavin" src="./img/header.png" /> </a>
             <nav class="utnav">
                 <a class="nav" href="start.html">Hem</a>
                 <a class="navin" href="fakta.html">Fakta</a>
