--- a/projekt-hype/site/start.html
+++ b/projekt-hype/site/start.html
@@ -7,6 +7,7 @@
     </head>
     <body class="margin0 bgstart">
         <div class="main">
+          <a  href="index.html"><img class="header2" src="./img/header2.png" /> </a>
           <a  href="index.html"><img class="header Picnavin" src="./img/header.png" /> </a>
             <nav class="utnav">
                 <a class="navin" href="start.html">Hem</a>
