--- a/projekt-hype/site/galleri.html
+++ b/projekt-hype/site/galleri.html
@@ -7,8 +7,8 @@
     </head>
     <body class="margin0 bgstart">
         <div class="main">
-          <a  href="index.html"><img class="header2" src="./img/header2.png" /> </a>
-          <a  href="index.html"><img class="header Picnavin" src="./img/header.png" /> </a>
+          <a class="header2" href="index.html"><img class="borderh" src="./img/header2.png" /> </a>
+          <a class="header" href="index.html"><img class="borderh" src="./img/header.png" /> </a>
             <nav class="utnav">
                 <a class="nav" href="start.html">Hem</a>
                 <a class="nav" href="fakta.html">Fakta</a>
