+Gett credit till fan-art konstnärerna

--- a/projekt-hype/site/galleri.html
+++ b/projekt-hype/site/galleri.html
@@ -25,10 +25,10 @@
             </div>
             <div class="rubrik"><h1>FAN-ART</h1></div>
             <div class="bildlada">
-                <img class="innebild" src="./img/fanart_g.jpg" />
-                <img class="innebild" src="./img/fanart_theo.png" />
-                <img class="innebild" src="./img/fanart_hargaaya.png" />
-                <img class="innebild" src="./img/fanart_adin.png" />
+                <img class="innebild" title="Alexander" src="./img/fanart_g.jpg" />
+                <img class="innebild" title="Theo" src="./img/fanart_theo.png" />
+                <img class="innebild" title="Hargaaya" src="./img/fanart_hargaaya.png" />
+                <img class="innebild" title="Adin" src="./img/fanart_adin.png" />
             </div>
         </div>
     </body>
